--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,10 +8,10 @@ build:
 
 python:
   install:
-    - requirements: requirements.txt  # Install dependencies from requirements.txt
+    - requirements: docs/requirements.txt  # Install dependencies from requirements.txt
     # Install our python package before building the docs
     - method: pip
       path: .
 
 sphinx:
-  configuration: src/docs/conf.py  # Path to your Sphinx configuration file
+  configuration: docs/conf.py  # Path to your Sphinx configuration file
