--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -11,7 +11,7 @@ python:
     - requirements: docs/requirements.txt  # Install dependencies from requirements.txt
     # Install our python package before building the docs
     - method: pip
-      path: .
+      path: ./restry
 
 sphinx:
   configuration: docs/conf.py  # Path to your Sphinx configuration file
