--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "ResTry"
+name = "pyreco"
 version = "0.0.1"
 authors = [
   { name="Merten Stender", email="merten.stender@tu-berlin.de" },
@@ -19,7 +19,7 @@ classifiers = [
 ]
 dependencies = [
     "matplotlib>=3.5.0",
-    "sklearn>=1.0.0",
+    "scikit-learn>=1.0.0",
     "networkx>=2.5",
     "numpy>=1.21.0",
 ]
@@ -34,5 +34,5 @@ exclude = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/Cyber-Physical-Systems-in-Mech-Eng/ResPy"
-Issues = "https://github.com/Cyber-Physical-Systems-in-Mech-Eng/ResPy/issues"
+Homepage = "https://github.com/Cyber-Physical-Systems-in-Mech-Eng/pyReCo"
+Issues = "https://github.com/Cyber-Physical-Systems-in-Mech-Eng/pyReCo/issues"
